[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/utilities/work_wheel/WorkWheel.gd" type="Script" id=1]
[ext_resource path="res://media/models/car_parts/SMCE-hull.tscn" type="PackedScene" id=2]
[ext_resource path="res://media/images/icon.png" type="Texture" id=3]
[ext_resource path="res://media/models/car_parts/SMCE-wheel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/objects/work_car/WorkCar.gd" type="Script" id=5]
[ext_resource path="res://src/attachments/BrushedMotor.gd" type="Script" id=7]
[ext_resource path="res://src/attachments/Gyroscope.gd" type="Script" id=8]
[ext_resource path="res://src/attachments/Odometer.gd" type="Script" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.126468, 1.27087 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.628528, 0.232967, 0.868031 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.92613, 0.140498, 0.426843 )

[node name="RayCar" type="RigidBody"]
can_sleep = false
angular_damp = 0.0
script = ExtResource( 5 )

[node name="Hull" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 1, -0.000488704, 4.37114e-08, 0.000488704, 1, 2.1362e-11, 0, 0.13547, -0.641151 )

[node name="HullCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -0.000488704, -1, 0, 1, -0.000488704, 0, 0.1354, -0.497771 )
shape = SubResource( 1 )

[node name="HullTopCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -0.000488704, -1, 0, 1, -0.000488704, 0, 0.135224, -0.136884 )
shape = SubResource( 2 )

[node name="FrontBumperCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -0.000488704, -1, 0, 1, -0.000488704, 0, 1.83574, -0.510214 )
shape = SubResource( 3 )

[node name="BackBumperCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -0.000488704, -1, 0, 1, -0.000488704, 0, -1.56459, -0.511982 )
shape = SubResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -0.08, 0, -3.72727e-06, -2.98182e-07, -3.90965e-05, 1, -1.45723e-10, 0.08, 0.000488704, 0, 2.32564, -0.602569 )
texture = ExtResource( 3 )

[node name="LeftBack" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 1, -0.000488704, 1.62921e-07, 0.000488704, 1, 7.96203e-11, -0.934, -0.53953, -0.641481 )
enabled = true
cast_to = Vector3( 0, 0, -1.2 )
script = ExtResource( 1 )

[node name="wheel" type="Spatial" parent="LeftBack"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.700143, 0 )

[node name="wheel" parent="LeftBack/wheel" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0.502, 0 )

[node name="LeftFront" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 1, -0.000488704, 1.62921e-07, 0.000488704, 1, 7.96203e-11, -0.934, 0.804344, -0.640824 )
enabled = true
cast_to = Vector3( 0, 0, -1.2 )
script = ExtResource( 1 )

[node name="wheel" type="Spatial" parent="LeftFront"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -0.7, 0 )

[node name="wheel" parent="LeftFront/wheel" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.501972, 0 )

[node name="RightBack" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 1, -0.000488704, 1.62921e-07, 0.000488704, 1, 7.96203e-11, 0.934, -0.53953, -0.641481 )
enabled = true
cast_to = Vector3( 0, 0, -1.2 )
script = ExtResource( 1 )

[node name="wheel" type="Spatial" parent="RightBack"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.700143, 0 )

[node name="wheel" parent="RightBack/wheel" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.501972, 0 )

[node name="RightFront" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 1, -0.000488704, 1.62921e-07, 0.000488704, 1, 7.96203e-11, 0.934, 0.80447, -0.640824 )
enabled = true
cast_to = Vector3( 0, 0, -1.2 )
script = ExtResource( 1 )

[node name="wheel" type="Spatial" parent="RightFront"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.7, 0 )

[node name="wheel" parent="RightFront/wheel" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.502, 0 )

[node name="AttachmentSlots" type="Spatial" parent="."]

[node name="Front" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, -0.000488704, -1, 0, 1, -0.000488704, 0, 1.93527, -0.240271 )

[node name="Front2" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.44073, 0.0953767 )

[node name="FrontTop" type="Position3D" parent="AttachmentSlots"]
transform = Transform( 1, 0, 0, 0, -0.000488704, -1, 0, 1, -0.000488704, 0, 1.27562, 0.13556 )

[node name="Left" type="Position3D" parent="AttachmentSlots"]
transform = Transform( -4.37114e-08, 0, 1, 1, -0.000488704, 4.37114e-08, 0.000488704, 1, 2.1362e-11, -0.974, 0.135275, -0.241151 )

[node name="Right" type="Position3D" parent="AttachmentSlots"]
transform = Transform( -4.37114e-08, 0, -1, -1, -0.000488704, 4.37114e-08, -0.000488704, 1, 2.1362e-11, 0.974, 0.135275, -0.241151 )

[node name="Back" type="Position3D" parent="AttachmentSlots"]
transform = Transform( -1, 0, -1.50996e-07, -1.50996e-07, -0.000488704, 1, -7.37925e-11, 1, 0.000488704, 0, -1.66472, -0.242031 )

[node name="BuiltinAttachments" type="Spatial" parent="."]

[node name="Left BrushedMotor" type="Node" parent="BuiltinAttachments"]
script = ExtResource( 7 )
forward_pin = 12
backward_pin = 14
enable_pin = 13

[node name="Right BrushedMotor" type="Node" parent="BuiltinAttachments"]
script = ExtResource( 7 )
forward_pin = 25
backward_pin = 26
enable_pin = 27

[node name="Gyroscope" type="Node" parent="BuiltinAttachments"]
script = ExtResource( 8 )
node = NodePath("../..")

[node name="Left Odometer" type="Spatial" parent="BuiltinAttachments"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.934, -0.211, 0 )
script = ExtResource( 9 )
_forward_reference = NodePath("../..")
distance_pin = 35
direction_pin = 34

[node name="Right Odometer" type="Spatial" parent="BuiltinAttachments"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.934, -0.211, 0 )
script = ExtResource( 9 )
_forward_reference = NodePath("../..")
distance_pin = 36
direction_pin = 39
